<resources>
    <string name="app_name">LogBook</string>
    <string name="fragment_title_home">Begin Lesson</string>
    <string name="fragment_title_history">Lesson history</string>
    <string name="fragment_title_profile">User profile</string>
    <string name="app_lesson">Driving Lesson</string>
    <string name="app_lesson_advanced">Lesson Details</string>
    <string name="app_profile">Student Profile</string>

    <string name="scan_nfc">Please scan your NFC tag</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="db_look">Reviewing database,this won\'t take long</string>
    <string name="user_updated">Update was successful</string>

    <string name="action_settings">Back</string>

    <!-- profile fragment -->
    <string-array name="states">
        <item>NSW</item>
        <item>VIC</item>
        <item>QLD</item>
        <item>WA</item>
        <item>TAS</item>
        <item>NT</item>
        <item>SA</item>
    </string-array>
    <string name="hint_name">New name</string>
    <string name="hint_surname">New surname</string>
    <string name="hint_dob">New date of birth</string>
    <string name="hint_contact_number">New contact number</string>
    <string name="btn_submit_lbl">Submit data</string>

    <!-- graphs and statistics -->
    <string name="graph_distance">km</string>
    <string name="graph_hours">Hours</string>
    <string name="chart_hours_completed">%.1f Hours completed out of 120</string>
    <string name="profile_day_hours">Day: %.1f</string>
    <string name="profile_night_hours">Night: %.1f</string>
    <string name="distance_units">km</string>
    <string name="xAxis_night_hours">Day hours</string>
    <string name="xAxis_day_hours">Night hours</string>
    <string name="chart_title">Distance and Hours drove over time</string>
    <string name="fitChart_title">Hours completed</string>

    <string name="btn_lesson_details_exit">Back to lesson history</string>
    <string name="btn_advanced_detail">View more detail</string>

    <!-- Navigation Drawer menu labels -->
    <string name="menu_user_settings">User Settings</string>
    <string name="nav_history">Lesson History</string>
    <string name="nav_home">Home</string>
    <string name="nav_goals">Learning Goals</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_profile_settings">Profile Settings</string>

    <!-- Profile values -->
    <string name="profile_learner_lbl">Learner Driver Licence</string>
    <string name="profile_license_lbl">License #:</string>
    <string name="profile_distance_lbl">Distance travelled:</string>
    <string name="profile_dob_lbl">Date of birth:</string>
    <string name="profile_state_lbl">State:</string>
    <string name="profile_name_lbl">Name:</string>
    <string name="profile_surname_lbl">Surname:</string>
    <string name="profile_contact_number">Contact number:</string>
    <string name="profile_completed">ALL HOURS COMPLETED</string>
    <string name="profile_in_progress">HOURS IN PROGRESS</string>

    <!-- Lesson activity -->
    <string name="dialog_title">Lesson pre-requests</string>
    <string name="edit_lpn">Licence Plate Number</string>
    <string name="edit_start_odometer">Start odometer</string>
    <string name="edit_end_odometer">End odometer</string>
    <string name="edit_supervisor">Supervisor licence number</string>
    <string name="backpress_alert">Exiting will result in termination of lesson</string>
    <string name="end_odometer_input">Please enter final odometer value</string>
    <string name="btn_end_lesson">End Lesson</string>

    <!--User drive detals -->
    <string name="drive_number">NUMBER OF LESSONS</string>
    <string name="drive_hours">HOURS DROVE</string>

    <!-- ERROR Messages -->
    <string name="error_noNfc">This device doesn\'t support NFC.</string>
    <string name="error_nfcDisabled">NFC disabled</string>
    <string name="error_badTag">ERROR: Bad NFC tag</string>
    <string name="error_profile">ERROR: Profile data could not be retrieved</string>
    <string name="error_logout">ERROR: with logging out, try again</string>
    <string name="error_lpn_null">Licence Plate Number cannot be empty</string>
    <string name="error_odometer_null">Odometer value cannot be empty</string>
    <string name="error_odometer_small">End odometer value smaller than start value</string>
    <string name="error_supervisor_null">Supervisor licence number cannot be empty</string>
    <string name="error_gms_connect">ERROR: Google Play Services could not be connected</string>
    <string name="error_user_not_exist">ERROR: The user does not exist</string>
    <string name="error_no_coordinates">ERROR: No coordinates found</string>
    <string name="bad_lesson">DELETING DATA: lesson or distance travelled too short (min 10 min, 500m)</string>
    <string name="guest_user">ERROR: Guest User</string>
    <string name="user_not_exist">ERROR: User does not exist</string>
    <string name="generic_error">ERROR: %s</string>
    <string name="backendless_user_null">ERROR: user could not be retrieved from server</string>
    <string name="error_address_not_found">Address unknown</string>
    <string name="error_not_updated">ERROR: update was not successful, try again later</string>
    <string name="error_incorrect_date_input">Date cannot be higher or equal to the current date</string>
    
    <!-- Google maps API key -->
    <string name="google_maps_api">AIzaSyC5UHViQYMaSrnkBes0YJn2bWIyPFVqhUM</string>

    <!-- History Card view -->
    <string name="txt_distance">%.2f km</string>
    <string name="txt_speed">%.2f km/h</string>
    <string name="title_lesson_id">Lesson #%d</string>
    <string name="title_lpn">Plate number</string>
    <string name="title_supervisor_licence">Supervisor Licence</string>
    <string name="title_distance">Distance</string>
    <string name="title_total_time">Total time</string>
    <string name="title_speed">Average speed</string>
    <string name="title_start_time">Start Time</string>
    <string name="title_end_time">End Time</string>
    <string name="title_start_odometer">Start Odometer</string>
    <string name="title_end_odometer">End Odometer</string>

    <!-- Material transition -->
    <string name="animation_transition">material_transition</string>

    <!-- Dialog box -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="alert_title">Confirm</string>
    <string name="alert_exit">Exit lesson</string>
    <string name="alert_stay">Continue lesson</string>
    <string name="dialog_logout">Login out of the app …</string>
    <string name="dialog_update_user">Updating user details …</string>

</resources>
