<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curved_subshape"
    android:backgroundTint="@color/mb_white">

    <ImageView
        android:id="@+id/upperColorBox"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/mb_white"
            android:textSize="@dimen/edit_values"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edit_lpn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/edit_lpn"
            android:inputType="textCapCharacters"
            android:maxLength="7" />

        <EditText
            android:id="@+id/edit_start_odometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/edit_start_odometer"
            android:inputType="number"
            android:maxLength="6" />

        <EditText
            android:id="@+id/edit_supervisor_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/edit_supervisor"
            android:inputType="number"
            android:maxLength="11" />
    </LinearLayout>

</RelativeLayout>