<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/side_nav_bar"
    android:padding="@dimen/layout_padding">

    <include
        android:id="@+id/fragment_header"
        layout="@layout/user_profile_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:padding="@dimen/user_detail_padding"
        android:layout_below="@+id/fragment_header"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_lbl"
            android:textColor="@color/mb_white"
            android:textSize="@dimen/profile_values"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName|textCapWords"
            android:textAlignment="center"
            android:textColor="@color/mb_white"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/edit_values" />


        <TextView
            android:id="@+id/lbl_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_suname_lbl"
            android:textColor="@color/mb_white"
            android:textSize="@dimen/profile_values"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/hint_surname"
            android:textSize="@dimen/edit_values"
            android:textAlignment="center"
            android:textColor="@color/mb_white"
            android:textColorHint="@color/grey" />

        <TextView
            android:id="@+id/lbl_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_dob_lbl"
            android:textColor="@color/mb_white"
            android:textSize="@dimen/profile_values"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/mb_white"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/profile_values"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/lbl_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_state_lbl"
                android:textColor="@color/mb_white"
                android:textSize="@dimen/profile_values"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@drawable/spinner_style"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="24dp" />
        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:padding="@dimen/layout_padding"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit_lbl"
        android:layout_alignParentBottom="true"
        android:textColor="@color/mb_white"
        app:backgroundTint="@color/colorAccent"/>

</RelativeLayout>