<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_radius">

        <LinearLayout
            android:id="@+id/lesson_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_lesson_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/title_txt_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_distance"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="@dimen/column_title_txt_size"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txt_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_lpn"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="@dimen/column_title_txt_size"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txt_lpn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="@dimen/column_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_total_time"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="@dimen/column_title_txt_size"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txt_total_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="@dimen/column_text_size" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_advanced_info"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_advanced_detail"
                android:textColor="@color/mb_blue"
                android:theme="@style/AdvancedDetailBtn"
                style="@style/Widget.AppCompat.Button.Borderless"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>